@@ -186,7 +186,7 @@ tk.pythoninspect  : False    # tk sets PYTHONINSEPCT
 ps.papersize      : letter   # executive, letter, legal, ledger, A0-A10, B0-B6, C0-C6
 ps.useafm         : False    # use of afm fonts -- breaks mathtext but results in small files
 ps.usedistiller   : False    # Experimental: use ghostscript to distill ps output - may yield smaller files
-ps.distiller.res  : 600      # dpi
+ps.distiller.res  : 6000      # dpi
 
 # Set the verbose flags.  This controls how much information
 # matplotlib gives you at runtime and where it goes.  Ther verbosity
